New Icon, new subpages
added scss subfiles, added some subpages, added new icon, added new name

--- a/src/theme/_spacing.scss
+++ b/src/theme/_spacing.scss
@@ -1,3 +1,15 @@
 .mt-0 {
     margin-top: 0;
 }
+
+.mr-0 {
+    margin-right: 0;
+}
+
+.mb-4 {
+    margin-bottom: 16px !important;
+}
+
+.mb-6 {
+    margin-bottom: 24px !important;
+}
